<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="nova_anotacao">Nova Anotação</string>
    <string name="app_name">Projeto Boa Viagem</string>
    <string name="title_activity_login">Boa Viagem</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="descricao_logo">Logo</string>
    <string name="textLabelUsuario">Usuario</string>
    <string name="textLabelSenha">Senha</string>
    <string name="textLabelLogin">Entrar</string>
    <string name="erro_autenticacao">Usuário ou senha inválidos</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="dashboardTitle">Menu</string>
    <string name="labelNovoGasto">Novo Gasto</string>
    <string name="labelNovaViagem">Nova Viagem</string>
    <string name="labelMinhasViagens">Minhas Viagens</string>
    <string name="labelConfiguracoes">Configurações</string>
    <string name="title_activity_viagem">Nova Viagem</string>
    <string name="labelDestino">Destino</string>
    <string name="labelTipoViagem">Tipo da Viagem</string>
    <string name="labelLazer">Lazer</string>
    <string name="labelNegocios">Negocios</string>
    <string name="labelDataChegada">Data Chegada</string>
    <string name="labelDataSaida">Data Saída</string>
    <string name="labelSelecione">Selecione</string>
    <string name="labelOrcamento">Orçamento</string>
    <string name="labelQuantidadePessoa">Quantidades de Pessoas</string>
    <string name="labelNovaViagemButtonSave">Criar Nova Viagem</string>
    <string name="title_activity_gasto">Novo Gasto</string>
    <string name="labelValor">Valor</string>
    <string name="labelDataGstao">Data</string>
    <string name="labelDescicao">Descricao</string>
    <string name="labelLocal">Local</string>
    <string name="labelButtonGastei">Gastei</string>
    <string name="labelCategoria">Categoria</string>
    <string name="lblMenuContextGastoRemover">Remover</string>
    <string name="alert_editar">Editar</string>
    <string name="alert_NovoGasto">Novo Gasto</string>
    <string name="alert_gastos_realizados">Gastos Realizados</string>
    <string name="alert_remover">Remover</string>
    <string name="alert_opcoes">Opções</string>
    <string name="confirmacao_exclusao_viagem">Confirmação de exclusão de viagem?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    
    <string name="preferencias">Preferências</string>
    <string name="modo_viagem_sumario">Modo Viagem Sumário</string>
    <string name="informe_valor_limite">Informe Valor Limite</string>
    <string name="modo_viagem">Modo Viagem</string>
    <string name="valor_limite_sumario">Valor Limite Sumário</string>
    <string name="valor_limite">Valor Limite</string>
    <string name="manter_conectado">Manter Conectado</string>
    
    <string name="preferenciasLogin">Preferências de Login</string>
    <string name="manter_conectado_preference">Manter Conectado</string>
    <string name="manter_conectado_suma">Manter aplicação sempre conectada</string>

    <string-array name="categoria_gasto">
        <item>Alimentação</item>
        <item>Combustível</item>
        <item>Transporte</item>
        <item>Hospedagem</item>
        <item>Outros</item>
    </string-array>

    <string name="lbl_teste_fragm_01">Teste Fragmento 01</string>
    <string name="lbl_sair">Sair</string>
    <string name="lbl_menu_novo_gasto">Novo Gasto</string>
    <string name="lbl_remover_viagem">Remover Viagem</string>
    <string name="title_activity_configuracoes">Configurações Activity</string>

    <string name="registro_salvo">Registro salvo com sucesso</string>
    <string name="erro_salvar">Erro ao salvar registro</string>
    <string name="erro_formato_numero">Erro ao formatar número</string>
    <string name="erro_parse_date">Erro ao formatar data</string>
    
    
    <string name="alert_dialog_single_choice">Associar a uma viagem</string>
    <string name="alert_dialog_ok">Associar</string>
    <string name="alert_dialog_cancel">Cancelar</string>
    
    <string name="custom_dialog_activity_text">Por favor, crie pelo menos uma viagem para que o gasto seja associado.</string>
    
    <string name="dialog_title_text">Não há viagem cadastrada.</string>
    <string name="dialog_criar_viagem">Criar Viagem</string>
    <string name="dialog_cancelar">Cancelar</string>
    
</resources>