<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".DashboardActivity" >

    <TextView
        android:id="@+id/dashboardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dashboardTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#015488" >

        <TextView
            android:id="@+id/novo_gasto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="60dp"
            android:clickable="true"
            android:drawableTop="@drawable/creditcardicon128px"
            android:gravity="center"
            android:onClick="selecionarOpcao"
            android:text="@string/labelNovoGasto"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nova_viagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/novo_gasto"
            android:layout_marginRight="45dp"
            android:clickable="true"
            android:drawableTop="@drawable/trackingrouteicon128px"
            android:gravity="center"
            android:onClick="selecionarOpcao"
            android:text="@string/labelNovaViagem"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/minhas_viagens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/novo_gasto"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="120dp"
            android:clickable="true"
            android:drawableTop="@drawable/folderdownloadicon128px"
            android:gravity="center"
            android:onClick="selecionarOpcao"
            android:text="@string/labelMinhasViagens"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/configuracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/minhas_viagens"
            android:layout_alignRight="@id/nova_viagem"
            android:clickable="true"
            android:drawableTop="@drawable/settingsblueicon128px"
            android:onClick="selecionarOpcao"
            android:text="@string/labelConfiguracoes"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>